Make runnable on Valhalla-based JDK